--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Countdown Text Display</title>
+        <title>Birthday Card</title>
         <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.2/dist/confetti.browser.min.js"></script>
         <script src="script.js"></script>
         <link rel="stylesheet" href="styles.css">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="countdown-container">
-        <div id="textDisplay"></div>
-    </div>
-
-    <div class="wishing-container">
-        <div class="ball"></div>
-    </div>
 
 </body>
 </html>
